# goatools

./: .gitattributes  .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  fisher.c  fisher.py  gaf_missingsym.err  genemerge.py  go_enrichment.py  goa_human_illegal.err  goea_statsmodels_fdr_bh.tsv  goea_statsmodels_fdr_bh.xlsx  goea_statsmodels_fdr_by.tsv  goea_statsmodels_fdr_by.xlsx  goea_statsmodels_fdr_gbs.tsv  goea_statsmodels_fdr_gbs.xlsx  goea_statsmodels_fdr_tsbh.tsv  goea_statsmodels_fdr_tsbh.xlsx  goea_statsmodels_fdr_tsbky.tsv  goea_statsmodels_fdr_tsbky.xlsx  goea_statsmodels_holm-sidak.tsv  goea_statsmodels_holm-sidak.xlsx  goea_statsmodels_hommel.tsv  goea_statsmodels_hommel.xlsx  goea_statsmodels_simes-hochberg.tsv  goea_statsmodels_simes-hochberg.xlsx  goea_statsmodels_sm_bonferroni.tsv  goea_statsmodels_sm_bonferroni.xlsx  goea_statsmodels_sm_holm.tsv  goea_statsmodels_sm_holm.xlsx  goea_statsmodels_sm_sidak.tsv  goea_statsmodels_sm_sidak.xlsx  makefile  multiple_testing.py  (+8 more)
.github/workflows/: build.yml
data/: association  description  i86.obo  population  study.txt
data/compare_gos/: 502S0.tab  i162a.tsv  i162b.tsv  sections.txt  tat_gos_simple2.tsv
data/david/: gjoneska2015_chart_Transient_Decrease.txt
data/gaf/: goa_human_illegal.gaf
data/gjoneska/: README.md  genes_Consistent_Decrease.txt  genes_Late_Decrease.txt  genes_Late_Increase.txt  genes_Transient_Increase.txt  genes_population.txt  gjoneska2015_chart6p7_Consistent_Decrease.txt  gjoneska2015_chart6p7_Consistent_Increase.txt  gjoneska2015_chart6p7_Late_Decrease.txt  gjoneska2015_chart6p7_Late_Increase.txt  gjoneska2015_chart6p7_Transient_Decrease.txt  gjoneska2015_chart6p7_Transient_Increase.txt  gjoneska2015_chart6p8_Consistent_Decrease.txt  gjoneska2015_chart6p8_Consistent_Increase.txt  gjoneska2015_chart6p8_Late_Decrease.txt  gjoneska2015_chart6p8_Late_Increase.txt  gjoneska2015_chart6p8_Transient_Increase.txt  pantherGeneList.txt  panther_Consistent_Decrease.txt  panther_Consistent_Increase.txt  panther_Late_Decrease.txt  panther_Late_Increase.txt  panther_Transient_Decrease.txt  panther_Transient_Increase.txt  sections_in.txt
data/gjoneska_pfenning/: README.md  david_chart6p8_Consistent_Increase.txt  david_chart6p8_Transient_Decrease.txt  genes_Consistent_Increase.txt  genes_Transient_Decrease.txt  makefile
data/goea_data_3702/: id_sym.txt
data/i122/: go_results.xlsx  study_and_bg_genes.xlsx
doc/md/: README_NCBI_gene.md  README_find_enrichment.md  README_go_plot.md  README_plot_go.md  README_wr_hier.md
docs/: descendants_with_relationships_example.py
docs/md/: README_NCBI_gene.md  README_find_enrichment.md  README_go_plot.md  README_wr_hier.md
goatools/: __init__.py  __main__.py  _version.py  associations.py  base.py  evidence_codes.py  fisher.py  gaf_reader.py  go_enrichment.py  go_search.py  godag_obosm.py  godag_plot.py  godag_small.py  ids_to_go.py  mapslim.py  multiple_testing.py  multiprocessing_tools.py  nt_utils.py  obo_info.py  obo_parser.py  obo_tasks.py  pvalcalc.py  randseed.py  ratio.py  rpt_lev_depth.py  semantic.py  statsdescribe.py  utils.py  version.py  wr_tbl.py  wr_tbl_class.py
goatools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
goatools/anno/: __init__.py  annoreader_base.py  broad_gos.py  dnld_ebi_goa.py  eco2group.py  factory.py  gaf_reader.py  genetogo_reader.py  gpad_reader.py  idtogos_reader.py  opts.py  update_association.py
goatools/cli/: __init__.py  compare_gos.py  docopt_parse.py  fetch_associations.py  find_enrichment.py  gos_get.py  gosubdag_plot.py  grouped.py  main.py  map_to_slim.py  ncbi_gene_results_to_python.py  plot_go_term.py  prt_terms.py  wr_hierarchy.py  wr_sections.py
goatools/godag/: __init__.py  consts.py  go_tasks.py  obo_optional_attributes.py  prtfncs.py  prttime.py  relationship_combos.py  relationship_str.py  reldepth.py  typedef.py
goatools/goea/: __init__.py  (+2 more)
notebook/: annotation_coverage.ipynb  goea_nbt3102.ipynb  makefile  report_depth_level.ipynb
notebooks/: .gitignore  Download_Ontologies_and_Annotations.ipynb  Enrichment_analyses_human_phenotype_ontology.ipynb  Optional_attribute_definition.ipynb  annotation_coverage.ipynb  annotations_gaf_file.ipynb  annotations_gpad_file.ipynb  annotations_ncbi_gene2go.ipynb  background_genes_ncbi.ipynb  cell_cycle.ipynb  children_and_descendants.ipynb  custom_tinfo.ipynb  dcnt_and_tinfo.ipynb  descendants_count.ipynb  get_isa_and_partof.ipynb  godag_obsolete_terms.ipynb  goea_nbt3102.ipynb  goea_nbt3102_all_study_genes.ipynb  goea_nbt3102_fncs.ipynb  goea_nbt3102_group_results.ipynb  makefile  parent_go_terms.ipynb  parents_and_ancestors.html  parents_and_ancestors.ipynb  relationships_change_dcnt_values.ipynb  relatonships_in_the_go.ipynb  report_depth_level.ipynb  semantic_similarity.ipynb  semantic_similarity_wang.ipynb
scripts/: compare_gos.py  fetch_associations.py  find_enrichment.py  go_plot.py  map_to_slim.py  ncbi_gene_results_to_python.py  plot_go_network.py  plot_go_term.py  prt_terms.py  wr_hier.py  wr_sections.py  write_hierarchy.py
sphinx/: .gitignore  Makefile  conf.py  index.rst
src/: fisher.i  fisher_wrap.c
tests/: .gitignore  __init__.py  cmp_mkpy.py  conftest.py  dnld_gaf_eco_mapping_derived.py  godagtimed_old.py  i148_semsim_lin.py  i148b_semsim_lin.py  i154_godag_optfld_consider.py  makefile  nbt3102_goea.py  nbt3102_goea_alt.py  optional_attrs.py  plt_i86obo.py  semantic_i150.py  semantic_i88.py  semantic_ns.py  semantic_similarity.py  similarity_top_parent.py  test_NCBI_Entrez_annotations.py  test_altid_godag.py  test_altid_gosubdag.py  test_anno_allfmts.py  test_anno_idtogos_chk.py  test_anno_rd_gaf_old.py  test_anno_rd_gene2go.py  test_annotations_gaf.py  test_assc_gafs.py  test_assc_remove_broad_goids.py  test_assc_stats.py  test_asscs_ns.py  test_cli_write_hierarchy.py  test_cmds_find_enrichment_md.py  test_cmds_goplot_rels.py  test_cmds_plot_go.py  test_combine_nt_lists.py  test_compare_gos.py  test_custom_ic.py  test_david_nts.py  test_dcnt_r01.py  (+130 more)
(+187 files in other folders)
