[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
    "setuptools_scm_git_archive",
    "wheel",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools_scm]
write_to = "goatools/version.py"
git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"
version_scheme = "no-guess-dev"

[tool.pytest.ini_options]
# Keep addopts minimal so per-file invocations (`pytest tests/test_foo.py`)
# are fast and predictable. The curated CI subset and `--cov` live in the
# makefile target `test_ci_subset`.
addopts = "-v"
