[metadata]
name = goatools
author = Haibao Tang, DV Klopfenstein
author_email = tanghaibao@gmail.com
license = BSD
description = Python scripts to find enrichment of GO terms
url = http://github.com/tanghaibao/goatools
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages =
    goatools
    goatools.godag
    goatools.gosubdag
    goatools.gosubdag.plot
    goatools.gosubdag.rpt
    goatools.test_data
    goatools.test_data.sections
    goatools.test_data.cli
    goatools.cli
    goatools.rpt
    goatools.anno
    goatools.anno.init
    goatools.anno.extensions
    goatools.goea
    goatools.grouper
    goatools.parsers
    goatools.semsim
    goatools.semsim.termwise
install_requires =
    docopt-ng
    ftpretty
    numpy
    openpyxl
    pandas
    pydot
    requests
    rich
    scipy
    setuptools
    statsmodels
    xlsxwriter
include_package_data = True
tests_require = pytest; pytest-cov; nose

[options.entry_points]
console_scripts =
    wr_sections = goatools.cli.wr_sections:main
    prt_terms = goatools.cli.prt_terms:main
    go_plot = goatools.cli.gosubdag_plot:main
    compare_gos = goatools.cli.compare_gos:main
    wr_hier = goatools.cli.wr_hierarchy:main
    map_to_slim = goatools.cli.map_to_slim:main
    ncbi_gene_results_to_python = goatools.cli.ncbi_gene_results_to_python:main
    plot_go_term = goatools.cli.plot_go_term:main
    fetch_associations = goatools.cli.fetch_associations:main
    find_enrichment = goatools.cli.find_enrichment:main
