[metadata]
name = goatools
author = Haibao Tang, DV Klopfenstein
author_email = tanghaibao@gmail.com
license = BSD
description = Python scripts to find enrichment of GO terms
url = http://github.com/tanghaibao/goatools
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages =
    goatools
    goatools.godag
    goatools.gosubdag
    goatools.gosubdag.plot
    goatools.gosubdag.rpt
    goatools.test_data
    goatools.test_data.sections
    goatools.test_data.cli
    goatools.cli
    goatools.rpt
    goatools.anno
    goatools.anno.init
    goatools.anno.extensions
    goatools.goea
    goatools.grouper
    goatools.parsers
    goatools.semsim
    goatools.semsim.termwise
install_requires =
    docopt-ng
    ftpretty
    numpy
    openpyxl
    pandas
    pydot
    requests
    rich
    scipy
    setuptools
    statsmodels
    xlsxwriter
include_package_data = True
tests_require = pytest; pytest-cov; nose

[options.entry_points]
console_scripts =
    goatools = goatools.cli.main:main
    find_enrichment.py = goatools.cli.find_enrichment:main
    go_plot.py = goatools.cli.gosubdag_plot:main
    map_to_slim.py = goatools.cli.map_to_slim:main
    wr_hier.py = goatools.cli.wr_hierarchy:main
    plot_go_term.py = goatools.cli.plot_go_term:main
    ncbi_gene_results_to_python.py = goatools.cli.ncbi_gene_results_to_python:main
